@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.3
 
+	- Double/triple clicks in Fl_Input fields didn't copy
+	  the expanded selection to the clipboard.
 	- Fl_Glut_Window and Fl_Gl_Window didn't always initialize
 	  the OpenGL context on MacOS.
 
